--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
-    <title>Document</title>
+    <title>Local Cookbook</title>
   </head>
   <body>
     <!-- NAVBAR-Cookbook -->
     <header>
       <nav></nav>
+      <section id="hero-section"></section>
     </header>
     <main>
       <!-- About -->
