--- a/index.html
+++ b/index.html
@@ -29,6 +29,23 @@
     <footer>
       <!-- Contact -->
       <section id="contact-footer"></section>
+      <div class="footer-container-fluid">
+        <div class="footer-row">
+          <div class="footer-col">
+            <button>Subscribe</button>
+          </div>
+        </div>
+        <div class="footer-row">
+                  <div class="footer-col"><a href="#"><img src="images1/insta.png" width="45px" height="45px"></a>
+                  <a href="#"><img src="images1/facebook.png" width="45px" height="45px"></a>
+                  <a href="#"><img src="images1/youtube.png" width="45px" height="45px"></a>
+                  <a href="#"><img src="images1/pinterest.png" width="45px" height="45px"></a></div>
+                </div>
+                <div class="footer-row">
+                  <div class="footer-col"><p>@2023</p></div>
+            </div>
+          </div>
+      </div>
     </footer>
   </body>
 </html>
