landpage main section

--- a/index.html
+++ b/index.html
@@ -21,10 +21,54 @@
     </header>
     <main>
       <!-- About -->
-      <section id="about-section"></section>
-
+      <section id="about-section">
+        <div class="container-fluid row">
+          <div id="about-img-container" class="col-sm-6 col-md-4">
+            <img id="about-img" src="./img/food3.png" />
+          </div>
+          <div id="about-text-container" class="col-md-7 col-sm-12">
+            <h2>Learn your new cooking approach</h2>
+            <p>
+              Are you tired of cooking the same meal every day? Then take a
+              minute to explore our cooking portal. Here you can find the best
+              recipes designed by the best chefs from India, Brasil and Ukraine.
+              Start your journey here and swim into the ocean of taste.
+            </p>
+          </div>
+        </div>
+      </section>
       <!-- Cuisine -->
-      <section id="cuisine-section"></section>
+      <section id="cuisine-section">
+        <div class="container-fluid">
+          <div class="row" id="cuisine-row-0"></div>
+          <div class="row" id="cuisine-row-1">
+            <h2>Meet our local famous Chefs</h2>
+          </div>
+          <div class="row" id="cuisine-row-2">
+            <div class="col-lg-4 col-sm-7" id="cuisine-img-container-1">
+              <div class="cuisine-inner-div">
+                <img src="./img/br_cousine.jpg" class="cuisine-img" />
+                <h3>Raiza Costa</h3>
+                <h4>Brazilian Cuisine</h4>
+              </div>
+            </div>
+            <div class="col-lg-4 col-sm-7" id="cuisine-img-container-2">
+              <div class="cuisine-inner-div">
+                <img src="./img/WS-St-In-13.jpg" class="cuisine-img" />
+                <h3>Ievgen Klopotenko</h3>
+                <h4>Ukrainian Cuisine</h4>
+              </div>
+            </div>
+            <div class="col-lg-4 col-sm-7" id="cuisine-img-container-3">
+              <div class="cuisine-inner-div">
+                <img src="./img/ranveer-brar_cty1.jpg" class="cuisine-img" />
+                <h3>Ranveer Brar</h3>
+                <h4>Indian Cuisine</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
       <!-- Contact -->
