--- a/index.html
+++ b/index.html
@@ -29,23 +29,37 @@
     <footer>
       <!-- Contact -->
       <section id="contact-footer"></section>
-      <div class="footer-container-fluid">
-        <div class="footer-row">
-          <div class="footer-col">
-            <button>Subscribe</button>
+      <div class="container-fluid">
+        <div class="row footer-row">
+          <div class="col-3 footer-col-3">
+            <ul>
+                <li><a href="#">Home</a></li>
+                  <li><a href="#">Features</a></li>
+                    <li><a href="#">Pricing</a></li>
+                      <li><a href="#">FAQs</a></li>
+                        <li><a href="#" >About</a></li>
+            </ul>
+          </div>
+        <div class="col-9 footer-col-9">
+            <form>
+                <h3>Subscribe to our newsletter</h3>
+                  <p>Monthly digest of what's new and exciting from us.</p>
+                    <input id="newsletter" type="text" placeholder="Email address">
+                    <button type="button">Subscribe</button>
+            </form>
           </div>
         </div>
-        <div class="footer-row">
-                  <div class="footer-col"><a href="#"><img src="images1/insta.png" width="45px" height="45px"></a>
-                  <a href="#"><img src="images1/facebook.png" width="45px" height="45px"></a>
-                  <a href="#"><img src="images1/youtube.png" width="45px" height="45px"></a>
-                  <a href="#"><img src="images1/pinterest.png" width="45px" height="45px"></a></div>
-                </div>
-                <div class="footer-row">
-                  <div class="footer-col"><p>@2023</p></div>
+        <div class="row footer-row">
+          <div class="col-10 footer-col-10">
+            <p>&copy; 2023 Company, Inc. All rights reserved.</p>
+          </div>
+          <div class="col-2 footer-col-2">
+              <a href="#"><img src="images1/insta.png" width="25px" height="25px"/></a>
+              <a href="#"><img src="images1/facebook.png" width="25px" height="25px"></a>
+              <a href="#"><img src="images1/youtube.png" width="25px" height="25px"></a>
+             <a href="#"><img src="images1/pinterest.png" width="25px" height="25px"></a>
             </div>
           </div>
-      </div>
-    </footer>
+        </div>
   </body>
 </html>
