--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <nav class="navbar navbar-expand-sm flex-sm-column bg-body-tertiary">
   <div class="container-fluid ">
     <img
-              src="./img/logo_black.png" class="img-fluid"
+              src="./img/TLK_logo.png" class="img-fluid"
               alt="logo"
               width="90"
               height="54"
