--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     </main>
     <footer>
       <!-- Contact -->
-      <section id="contact-footer"></section>
+      <section id="contact-footer">
 
       <div class="container-fluid">
         <div class="row footer-row">
@@ -170,6 +170,7 @@
         </div>
 
     </footer>
+    </section>
     <!-- JS Bootstrap Link -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
