--- a/html/brazil.html
+++ b/html/brazil.html
@@ -1,7 +1,130 @@
-<!-- NAVBAR-Cookbook -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Bootstrap link-->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
+      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../styles.css" />
+    <!-- Font-awesome link-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
+    <title>Brazilian Cuisine</title>
+  </head>
+  <body>
+    <!-- NAVBAR-Cookbook -->
+    <header>
 
-<!-- About food -->
+  <nav class="navbar navbar-expand-sm flex-sm-column bg-body-tertiary">
+  <div class="container-fluid ">
+    <img
+              src="../img/TLK_logo.png" class="img-fluid"
+              alt="logo"
+              width="90"
+              height="54"
+            />
+  
+        <ul class="navbar-nav justify-content-lg-between">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#about">About</a>
+        </li>
+       <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Cuisine
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="./html/brazil.html">Brazil</a></li>
+                  <li><a class="dropdown-item" href="./html/india.html">India</a></li>
+                  <li><a class="dropdown-item" href="./html/ukraine.html">Ukraine</a></li>
+                </ul>
+              </li>
+      
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-light" type="submit">Search</button>
+      </form>
+      </ul>
+    </div>
+  </div>
+</nav>
 
-<!-- Recipes images grid -->
+<!-- About -->
+      <section id="about-section">
+        <div class="container-fluid row">
+          <div id="about-img-container" class="col-sm-6 col-md-4">
+            <img id="about-img" src="../img/food3.png" />
+          </div>
+          <div id="about-text-container" class="col-md-7 col-sm-12">
+            <h2>Learn your new cooking approach</h2>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus impedit omnis numquam, modi at, sequi expedita, necessitatibus exercitationem quod facere in maiores commodi voluptatibus culpa temporibus fuga quibusdam a explicabo?
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, saepe? Dicta, nulla facilis atque impedit quae ipsa aliquam labore repellendus repudiandae neque ea consequatur officiis harum sequi libero tempore blanditiis.
+            </p>
+          </div>
+        </div>
+      </section>
 
-<!-- Contact -->
+    <footer>
+      <!-- Contact -->
+      <section id="contact-footer">
+
+      <div class="container-fluid">
+        <div class="row footer-row">
+          <div class="col-3 footer-col-3">
+            <ul>
+                <li><a href="#">Home</a></li>
+                  <li><a href="#">Features</a></li>
+                    <li><a href="#">Pricing</a></li>
+                      <li><a href="#">FAQs</a></li>
+                        <li><a href="#" >About</a></li>
+            </ul>
+          </div>
+        <div class="col-9 footer-col-9">
+            <form>
+                <h3>Subscribe to our newsletter</h3>
+                  <p>Monthly digest of what's new and exciting from us.</p>
+                    <input id="newsletter" type="text" placeholder="Email address">
+                    <button type="button">Subscribe</button>
+            </form>
+          </div>
+        </div>
+        <div class="row footer-row">
+          <div class="col-10 footer-col-10">
+            <p>&copy; 2023 Company, Inc. All rights reserved.</p>
+          </div>
+          <div class="col-2 footer-col-2">
+              <a href="#"><img src="../images1/insta.png" width="25px" height="25px"/></a>
+              <a href="#"><img src="../images1/facebook.png" width="25px" height="25px"></a>
+              <a href="#"><img src="../images1/youtube.png" width="25px" height="25px"></a>
+             <a href="#"><img src="../images1/pinterest.png" width="25px" height="25px"></a>
+            </div>
+          </div>
+        </div>
+
+    </footer>
+    </section>
+    <!-- JS Bootstrap Link -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+      crossorigin="anonymous"
+    ></script>
+
+  </body>
+</html>
