--- a/index.html
+++ b/index.html
@@ -109,21 +109,21 @@
           <div class="row" id="cuisine-row-2">
             <div class="col-lg-4 col-sm-7" id="cuisine-img-container-1">
               <div class="cuisine-inner-div">
-                <img src="./img/br_cousine.jpg" class="cuisine-img" />
+                <a href="./html/recipe.html"><img src="./img/br_cousine.jpg" class="cuisine-img" /></a>
                 <h3>Raiza Costa</h3>
                 <h4>Brazilian Cuisine</h4>
               </div>
             </div>
             <div class="col-lg-4 col-sm-7" id="cuisine-img-container-2">
               <div class="cuisine-inner-div">
-                <img src="./img/WS-St-In-13.jpg" class="cuisine-img" />
+                <a href="./html/recipe.html"><img src="./img/WS-St-In-13.jpg" class="cuisine-img" /></a>
                 <h3>Ievgen Klopotenko</h3>
                 <h4>Ukrainian Cuisine</h4>
               </div>
             </div>
             <div class="col-lg-4 col-sm-7" id="cuisine-img-container-3">
               <div class="cuisine-inner-div">
-                <img src="./img/ranveer-brar_cty1.jpg" class="cuisine-img" />
+               <a href="./html/recipe.html"><img src="./img/ranveer-brar_cty1.jpg" class="cuisine-img" /></a>
                 <h3>Ranveer Brar</h3>
                 <h4>Indian Cuisine</h4>
               </div>
