--- a/html/brazil.html
+++ b/html/brazil.html
@@ -33,7 +33,7 @@
   
         <ul class="navbar-nav justify-content-lg-between">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+          <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#about">About</a>
