finished recipe page

--- a/html/recipe.html
+++ b/html/recipe.html
@@ -65,10 +65,76 @@
 </nav>
 
 <!-- Recipes image and Ingredients -->
-<section id="recipe"></section>
- <img src="../img/food3.png" alt="">
+<section id="recipe">
+<div id="chef-container" class="container">
+<div class="row row-1-container">
+  <div class="col-lg-6 col-sm-12">
+    <h2 id="raiza">Raiza Costa</h2>
+    <h3 id="costa">Brazilian Cuisine</h3>
+    <p id="chef-text">Brazilian cuisine is very regionalized, each region has its own typical dishes. This is the result of a mixture of different European, Indigenous, and African ingredients and influences.</p>
+  </div>
+  <div class="col-lg-6 col-sm-12 chef-img-container">
+    <img src="../img/br_cousine.jpg" class="chef-img">
+  </div>
+</div>
+<div class="row span-line-row">
+  <div class="col-10 span-line-col"></div>
+</div>
+</div>
+</section>
+ 
 <!-- Directions -->
-<section id="recipe"></section>
+<section id="recipe">
+<div id="recipe-container" class="container">
+  <div class="row recipe-0-row">
+    <div class="col-12 dish-name-container">
+      <h2 id="dish-name">Brazilian Feijoada (Black Bean Stew)</h2>
+    </div>
+  </div>
+  <div class="row recipe-1-row">
+    <div id="recipe-img-container" class="col-lg-5 col-sm-12 col-12"><img class="recipe-img-col" src="../img/Br-recipe_page.png" alt=""></div>
+    <div class="col-lg-7 col-sm-12 ingridients">
+      <h2 id="ingridients-header">Ingridients</h2>
+      <ul class="ingridient-list">
+        <li>1 pound dry black beans (soaked overnight)</li>
+        <li>4 ounces slab bacon (rind removed), diced</li>
+        <li>1 pound pork ribs, cut into individual ribs</li>
+        <li>2 Mexican chorizo sausages (roughly 11 oz each), sliced</li>
+        <li>1 smoked sausage (roughly 7 oz), such as linguica or kielbasa, sliced
+        </li>
+        <li>1 large onion, chopped</li>
+        <li>4 cloves garlic, minced
+        </li>
+        <li>3 tomatoes, diced
+        </li>
+        <li>1 teaspoon salt
+        </li>
+        <li>1 teaspoon ground black pepper
+        </li>
+        <li>3 bay leaves
+        </li>
+        <li>water</li>
+        <li>white rice (for serving)</li>
+        <li>farofa (for serving)</li>
+      </ul>
+    </div>
+  </div>
+  <div class="row recipe-2-row">
+    <h3 class="col-lg-3 col-sm-12" id="direction-header">Directions</h3>
+    <p class="col-12" id="directions">
+      In a large bowl with water, soak beans overnight.
+When you are ready to make your stew, in a large heavy-bottom soup pot, over medium heat, add the oil and bacon. Cook until crisp and transfer to a plate.
+Use the same saucepan to brown ribs and sausages in batches. (You will want to be sure to cook the sliced Mexican chorizo on its own, as it can be very greasy. Drain the grease before continuing.) Set each aside as cooked.
+If needed, add more oil to the pan. On medium-high, sauté onion, and garlic until soft and translucent, about 5 minutes. Add tomatoes and cook for another 3 minutes.
+Drain and rinse the soaked beans. Add them to the pot along with the ribs, bacon, sausages, salt, pepper, and bay leaf. Cover with water (about 8 cups).
+Bring the mixture to a boil and reduce the heat to low. Cover and let it cook for 2 to 2 and a half hours, or until the beans are soft.
+If the stew is too liquidy, uncover the saucepan and continue to cook for another 20 minutes to allow some of the liquid to evaporate.
+Serve with white rice and sprinkle some farofa on top.
+
+    </p>
+  </div>
+</div>
+</section>
 
     <footer>
       <!-- Contact -->
