--- a/html/brazil.html
+++ b/html/brazil.html
@@ -63,12 +63,11 @@
     </div>
   </div>
 </nav>
-
 <!-- About -->
       <section id="about-section">
         <div class="container-fluid row">
           <div id="about-img-container" class="col-sm-6 col-md-4">
-            <img id="about-img" src="../img/food3.png" />
+            <img id="about-img" src="../img/food3.png"/>
           </div>
           <div id="about-text-container" class="col-md-7 col-sm-12">
             <h2>Learn your new cooking approach</h2>
@@ -80,10 +79,48 @@
         </div>
       </section>
 
-    <footer>
-      <!-- Contact -->
-      <section id="contact-footer">
+      <!-- Recipes images grid -->
+      <section id="main-dish">
+        <div class="container-fluid">
+          <div class="row main-dish">
+            <div class="row" id="main-dish-row"></div>
 
+            <div class="col-12 main-dish"><h2>Main Dishes</h2></div>
+          </div>
+          <div class="row main-dish">
+            <div class="col-4 main-dish"><a href="./recipe.html"><img src="../images1/Main- Pequi Chicken and Saffron Rice.jpg" width="400px" height="400px"></a>
+              <div class="main-dish-name"><h4>Pequi Chicken and Saffron Rice</h4></div>
+            </div>
+            <div class="col-4 main-dish"><a href="./recipe.html"><img src="../images1/Main-Feijoada (Black Bean Stew).png" width="400px" height="400px"></a>
+              <div class="main-dish-name"><h4>Main-Feijoada (Black Bean Stew)</h4></div>
+            </div>
+            <div class="col-4 main-dish"><a href="./recipe.html"><img src="../images1/Main -Moqueca (Brazilian Seafood Stew).jpg" width="400px" height="400px"></a>
+              <div class="main-dish-name"><h4>Moqueca (Brazilian Seafood Stew)</h4></div>
+          </div>
+          </div>
+          <div class="row" id="main-dish-row"></div>
+
+          <div class="row main-dish">
+            <div class="col-12 main-dish"><h2>Desserts</h2></div>
+          </div>
+          <div class="row main-dish">
+            <div class="col-4 main-dish"><a href="./recipe.html"><img src="../images1/Dessert- Brigadeiro (CHOCOLATE FUDGE BALLS).png" width="400px" height="400px"></a>
+              <div class="main-dish-name"><h4>Brigadeiro (Chocolate Fudge Balls)</h4></div>
+            </div>
+            <div class="col-4 main-dish"><a href="./recipe.html"><img src="../images1/Dessert- PASSION FRUIT MOUSSE.jpg" width="400px" height="400px"></a>
+              <div class="main-dish-name"><h4>Passion Fruit Mousse</h4></div>
+            </div>
+            <div class="col-4 main-dish"><a href="./recipe.html"><img src="../images1/Dessert-carrot_ cake.jpg" width="400px" height="400px"></a>
+              <div class="main-dish-name"><h4>Carrot Cake</h4></div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+
+      <!-- Contact -->
+      <footer>
+      <section id="contact-footer">
       <div class="container-fluid">
         <div class="row footer-row">
           <div class="col-3 footer-col-3">
