--- a/html/brazil.html
+++ b/html/brazil.html
@@ -71,11 +71,9 @@
             <img id="about-img" src="../img/food3.png" />
           </div>
           <div id="about-text-container" class="col-md-7 col-sm-12">
-            <h2>Learn your new cooking approach</h2>
+            <h2>Brazilian Cuisine</h2>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus impedit omnis numquam, modi at, sequi expedita, necessitatibus exercitationem quod facere in maiores commodi voluptatibus culpa temporibus fuga quibusdam a explicabo?
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, saepe? Dicta, nulla facilis atque impedit quae ipsa aliquam labore repellendus repudiandae neque ea consequatur officiis harum sequi libero tempore blanditiis.
-            </p>
+              Brazilian cuisine is definitely not one-size-fits-all! In fact, it's incredibly regionalized, with each area boasting its own unique and delicious dishes. This is due to a blend of various influences, including those from Europe, Africa, and indigenous cultures. The end result is a diverse and flavorful cuisine that reflects the country's rich history and cultural heritage.
           </div>
         </div>
       </section>
