--- a/html/ukraine-cousine.html
+++ b/html/ukraine-cousine.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
-    <title>Brazilian Cuisine</title>
+    <title>Ukraine Cuisine</title>
   </head>
   <body>
     <!-- NAVBAR-Cookbook -->
@@ -63,6 +63,7 @@
     </div>
   </div>
 </nav>
+
 <!-- About -->
       <section id="about-recipe-section">
         <div class="container-fluid row">
@@ -70,13 +71,14 @@
             <img id="about-img" src="../img/food3.png" />
           </div>
           <div id="about-text-container" class="col-md-7 col-sm-12">
-            <h4>Brazilian Cuisine</h4>
+            <h4>Ukrainian Cuisine</h4>
             <p>
-              Brazilian cuisine is definitely not one-size-fits-all! In fact, it's incredibly regionalized, with each area boasting its own unique and delicious dishes. This is due to a blend of various influences, including those from Europe, Africa, and indigenous cultures. The end result is a diverse and flavorful cuisine that reflects the country's rich history and cultural heritage.
+              The unique characteristics of Ukrainian cuisine have developed over many centuries due to various factors such as neighbouring countries, climate, fertile soil, and diligent locals. Ukrainian dishes are known for their rich flavours, often seasoned with garlic, and despite the use of contrasting tastes, they blend together seamlessly.
             </p>
           </div>
         </div>
       </section>
+
 
       <!-- Recipes images grid -->
       <section id="main-dish">
@@ -87,14 +89,14 @@
             <div class="col-12 main-dish"><h2>Main Dishes</h2></div>
           </div>
           <div class="row main-dish">
-            <div class="col-4 main-dish"><a href="./recipe.html"><img src="../images1/Main- Pequi Chicken and Saffron Rice.jpg" width="400px" height="400px"></a>
-              <div class="main-dish-name"><h4>Pequi Chicken and Saffron Rice</h4></div>
+            <div class="col-4 main-dish"><a href="./recipe.html"><img src="../img/Main - borschtsch.png" width="400px" height="400px"></a>
+              <div class="main-dish-name"><h4>Borschtsch</h4></div>
             </div>
-            <div class="col-4 main-dish"><a href="./recipe.html"><img src="../images1/Main-Feijoada (Black Bean Stew).png" width="400px" height="400px"></a>
-              <div class="main-dish-name"><h4>Main-Feijoada (Black Bean Stew)</h4></div>
+            <div class="col-4 main-dish"><a href="./recipe.html"><img src="../img/Main- golubci(cabbage rolls).jpg" width="400px" height="400px"></a>
+              <div class="main-dish-name"><h4>Golubci (cabbage rolls) </h4></div>
             </div>
-            <div class="col-4 main-dish"><a href="./recipe.html"><img src="../images1/Main -Moqueca (Brazilian Seafood Stew).jpg" width="400px" height="400px"></a>
-              <div class="main-dish-name"><h4>Moqueca (Brazilian Seafood Stew)</h4></div>
+            <div class="col-4 main-dish"><a href="./recipe.html"><img src="../img/Main-Varenyky (dumpling).jpg" width="400px" height="400px"></a>
+              <div class="main-dish-name"><h4>Varenyky (Dumpling) </h4></div>
           </div>
           </div>
           <div class="row" id="main-dish-row"></div>
@@ -103,14 +105,14 @@
             <div class="col-12 main-dish"><h2>Desserts</h2></div>
           </div>
           <div class="row main-dish">
-            <div class="col-4 main-dish"><a href="./recipe.html"><img src="../images1/Dessert- Brigadeiro (CHOCOLATE FUDGE BALLS).png" width="400px" height="400px"></a>
-              <div class="main-dish-name"><h4>Brigadeiro (Chocolate Fudge Balls)</h4></div>
+            <div class="col-4 main-dish"><a href="./recipe.html"><img src="../img/Dessert_napoleon cake.png" width="400px" height="400px"></a>
+              <div class="main-dish-name"><h4>Napoleon Cake</h4></div>
             </div>
-            <div class="col-4 main-dish"><a href="./recipe.html"><img src="../images1/Dessert- PASSION FRUIT MOUSSE.jpg" width="400px" height="400px"></a>
-              <div class="main-dish-name"><h4>Passion Fruit Mousse</h4></div>
+            <div class="col-4 main-dish"><a href="./recipe.html"><img src="../img/Dessert- syrniki (cheese_pancakes).jpg" width="400px" height="400px"></a>
+              <div class="main-dish-name"><h4>syrniki (Cheese Pancake)</h4></div>
             </div>
-            <div class="col-4 main-dish"><a href="./recipe.html"><img src="../images1/Dessert-carrot_ cake.jpg" width="400px" height="400px"></a>
-              <div class="main-dish-name"><h4>Carrot Cake</h4></div>
+            <div class="col-4 main-dish"><a href="./recipe.html"><img src="../img/Dessert- cherry varenyki ( Dumplings).jpg" width="400px" height="400px"></a>
+              <div class="main-dish-name"><h4>Cherry Varenyky (Cherry Dumpling)</h4></div>
             </div>
           </div>
         </div>
