--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#about">About</a>
+          <a class="nav-link" href="#about-section">About</a>
         </li>
        <li class="nav-item dropdown">
                 <a
