--- a/html/brazil.html
+++ b/html/brazil.html
@@ -87,13 +87,13 @@
             <div class="col-12 main-dish"><h2>Main Dishes</h2></div>
           </div>
           <div class="row main-dish">
-            <div class="col-4 main-dish"><a href="./recipe.html"><img src="../images1/Main- Pequi Chicken and Saffron Rice.jpg" width="400px" height="400px"></a>
+            <div class="col-4 main-dish"><a href="./pequi_chicken.html"><img src="../images1/Main- Pequi Chicken and Saffron Rice.jpg" width="400px" height="400px"></a>
               <div class="main-dish-name"><h4>Pequi Chicken and Saffron Rice</h4></div>
             </div>
-            <div class="col-4 main-dish"><a href="./recipe.html"><img src="../images1/Main-Feijoada (Black Bean Stew).png" width="400px" height="400px"></a>
+            <div class="col-4 main-dish"><a href="./Brazilian-Feijoada.html"><img src="../images1/Main-Feijoada (Black Bean Stew).png" width="400px" height="400px"></a>
               <div class="main-dish-name"><h4>Main-Feijoada (Black Bean Stew)</h4></div>
             </div>
-            <div class="col-4 main-dish"><a href="./recipe.html"><img src="../images1/Main -Moqueca (Brazilian Seafood Stew).jpg" width="400px" height="400px"></a>
+            <div class="col-4 main-dish"><a href="./moqueca.html"><img src="../images1/Main -Moqueca (Brazilian Seafood Stew).jpg" width="400px" height="400px"></a>
               <div class="main-dish-name"><h4>Moqueca (Brazilian Seafood Stew)</h4></div>
           </div>
           </div>
@@ -103,13 +103,13 @@
             <div class="col-12 main-dish"><h2>Desserts</h2></div>
           </div>
           <div class="row main-dish">
-            <div class="col-4 main-dish"><a href="./recipe.html"><img src="../images1/Dessert- Brigadeiro (CHOCOLATE FUDGE BALLS).png" width="400px" height="400px"></a>
+            <div class="col-4 main-dish"><a href="./brigadeiro.html"><img src="../images1/Dessert- Brigadeiro (CHOCOLATE FUDGE BALLS).png" width="400px" height="400px"></a>
               <div class="main-dish-name"><h4>Brigadeiro (Chocolate Fudge Balls)</h4></div>
             </div>
-            <div class="col-4 main-dish"><a href="./recipe.html"><img src="../images1/Dessert- PASSION FRUIT MOUSSE.jpg" width="400px" height="400px"></a>
+            <div class="col-4 main-dish"><a href="./passion_fruit.html"><img src="../images1/Dessert- PASSION FRUIT MOUSSE.jpg" width="400px" height="400px"></a>
               <div class="main-dish-name"><h4>Passion Fruit Mousse</h4></div>
             </div>
-            <div class="col-4 main-dish"><a href="./recipe.html"><img src="../images1/Dessert-carrot_ cake.jpg" width="400px" height="400px"></a>
+            <div class="col-4 main-dish"><a href="./carrot_cake.html"><img src="../images1/Dessert-carrot_ cake.jpg" width="400px" height="400px"></a>
               <div class="main-dish-name"><h4>Carrot Cake</h4></div>
             </div>
           </div>
