--- a/html/india.html
+++ b/html/india.html
@@ -89,13 +89,13 @@
             <div class="col-12 main-dish"><h2>Main Dishes</h2></div>
           </div>
           <div class="row main-dish">
-            <div class="col-4 main-dish"><a href="./recipe.html"><img src="../img/Main - Dosa.png" width="400px" height="400px"></a>
+            <div class="col-4 main-dish"><a href="./Dosa.html"><img src="../img/Main - Dosa.png" width="400px" height="400px"></a>
               <div class="main-dish-name"><h4>Dosa</h4></div>
             </div>
-            <div class="col-4 main-dish"><a href="./recipe.html"><img src="../img/Main -Idli.png" width="400px" height="400px"></a>
+            <div class="col-4 main-dish"><a href="./Idli.html"><img src="../img/Main -Idli.png" width="400px" height="400px"></a>
               <div class="main-dish-name"><h4>Idli</h4></div>
             </div>
-            <div class="col-4 main-dish"><a href="./recipe.html"><img src="../img/Main_chicken_biryani.jpg" width="400px" height="400px"></a>
+            <div class="col-4 main-dish"><a href="./Chicken-biryani.html"><img src="../img/Main_chicken_biryani.jpg" width="400px" height="400px"></a>
               <div class="main-dish-name"><h4>Chicken Biryani</h4></div>
           </div>
           </div>
