--- a/html/recipe.html
+++ b/html/recipe.html
@@ -36,7 +36,7 @@
           <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#about">About</a>
+          <a class="nav-link" href="../index.html#about-section">About</a>
         </li>
        <li class="nav-item dropdown">
                 <a
@@ -49,9 +49,9 @@
                   Cuisine
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="./html/brazil.html">Brazil</a></li>
-                  <li><a class="dropdown-item" href="./html/india.html">India</a></li>
-                  <li><a class="dropdown-item" href="./html/ukraine.html">Ukraine</a></li>
+                  <li><a class="dropdown-item" href="../html/brazil.html">Brazil</a></li>
+                  <li><a class="dropdown-item" href="../html/india.html">India</a></li>
+                  <li><a class="dropdown-item" href="../html/ukraine-cousine.html">Ukraine</a></li>
                 </ul>
               </li>
       
