--- a/html/ukraine-cousine.html
+++ b/html/ukraine-cousine.html
@@ -89,13 +89,13 @@
             <div class="col-12 main-dish"><h2>Main Dishes</h2></div>
           </div>
           <div class="row main-dish">
-            <div class="col-4 main-dish"><a href="./recipe.html"><img src="../img/Main - borschtsch.png" width="400px" height="400px"></a>
+            <div class="col-4 main-dish"><a href="./Ukrainian-Borschtsch.html"><img src="../img/Main - borschtsch.png" width="400px" height="400px"></a>
               <div class="main-dish-name"><h4>Borschtsch</h4></div>
             </div>
-            <div class="col-4 main-dish"><a href="./recipe.html"><img src="../img/Main- golubci(cabbage rolls).jpg" width="400px" height="400px"></a>
+            <div class="col-4 main-dish"><a href="./Golubtsi.html"><img src="../img/Main- golubci(cabbage rolls).jpg" width="400px" height="400px"></a>
               <div class="main-dish-name"><h4>Golubci (cabbage rolls) </h4></div>
             </div>
-            <div class="col-4 main-dish"><a href="./recipe.html"><img src="../img/Main-Varenyky (dumpling).jpg" width="400px" height="400px"></a>
+            <div class="col-4 main-dish"><a href="./Varenyky.html"><img src="../img/Main-Varenyky (dumpling).jpg" width="400px" height="400px"></a>
               <div class="main-dish-name"><h4>Varenyky (Dumpling) </h4></div>
           </div>
           </div>
@@ -105,13 +105,13 @@
             <div class="col-12 main-dish"><h2>Desserts</h2></div>
           </div>
           <div class="row main-dish">
-            <div class="col-4 main-dish"><a href="./recipe.html"><img src="../img/Dessert_napoleon cake.png" width="400px" height="400px"></a>
+            <div class="col-4 main-dish"><a href="./Napoleon.html"><img src="../img/Dessert_napoleon cake.png" width="400px" height="400px"></a>
               <div class="main-dish-name"><h4>Napoleon Cake</h4></div>
             </div>
-            <div class="col-4 main-dish"><a href="./recipe.html"><img src="../img/Dessert- syrniki (cheese_pancakes).jpg" width="400px" height="400px"></a>
+            <div class="col-4 main-dish"><a href="./Syrniki.html"><img src="../img/Dessert- syrniki (cheese_pancakes).jpg" width="400px" height="400px"></a>
               <div class="main-dish-name"><h4>syrniki (Cheese Pancake)</h4></div>
             </div>
-            <div class="col-4 main-dish"><a href="./recipe.html"><img src="../img/Dessert- cherry varenyki ( Dumplings).jpg" width="400px" height="400px"></a>
+            <div class="col-4 main-dish"><a href="./Cherry-varenyky.html"><img src="../img/Dessert- cherry varenyki ( Dumplings).jpg" width="400px" height="400px"></a>
               <div class="main-dish-name"><h4>Cherry Varenyky (Cherry Dumpling)</h4></div>
             </div>
           </div>
